// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading renders correctly with default props 1`] = `
<h1
  class="Heading Heading_level_1 Heading_margin"
  data-lego="react"
>
  Test
</h1>
`;

exports[`Heading renders with defined level=1 1`] = `
<h1
  class="Heading Heading_level_1 Heading_margin"
  data-lego="react"
>
  Test
</h1>
`;

exports[`Heading renders with defined level=1&margin=false 1`] = `
<h1
  class="Heading Heading_level_1"
  data-lego="react"
>
  Test
</h1>
`;

exports[`Heading renders with defined level=2 1`] = `
<h2
  class="Heading Heading_level_2 Heading_margin"
  data-lego="react"
>
  Test
</h2>
`;

exports[`Heading renders with defined level=2&margin=false 1`] = `
<h2
  class="Heading Heading_level_2"
  data-lego="react"
>
  Test
</h2>
`;

exports[`Heading renders with defined level=3 1`] = `
<h3
  class="Heading Heading_level_3 Heading_margin"
  data-lego="react"
>
  Test
</h3>
`;

exports[`Heading renders with defined level=3&margin=false 1`] = `
<h3
  class="Heading Heading_level_3"
  data-lego="react"
>
  Test
</h3>
`;

exports[`Heading renders with passed className 1`] = `
<h1
  class="Heading Heading_level_1 Heading_margin className"
  data-lego="react"
>
  Test
</h1>
`;
